test/errors/type/math/clamp2.yasl
math.clamp(1, .s, 2)
